* se modifica la configuracion para desactivar el automontaje

--- a/dosbox-0.74.conf
+++ b/dosbox-0.74.conf
@@ -239,6 +239,6 @@ ipx=true
 [autoexec]
 # Lines in this section will be run at startup.
 # You can put your MOUNT lines here.
-mount c /home/user/dosbox -freesize 1024
-c:
+# mount c /home/su-usuario/dosbox -freesize 1024
+# c:
 cls
