* se desactiva los parametros innecesarios

--- a/dosbox-0.74.conf
+++ b/dosbox-0.74.conf
@@ -9,7 +9,7 @@
 #                     Using your monitor's native resolution with aspect=true might give the best results.
 #                     If you end up with small window on a large screen, try an output different from surface.
 # windowresolution: Scale the window to this size IF the output device supports hardware scaling.
-#                     (output=surface does not!)
+#                     (output=overlay does not!)
 #           output: What video system to use for output.
 #                   Possible values: surface, overlay, opengl, openglnb.
 #         autolock: Mouse will automatically lock, if you click on the screen. (Press CTRL-F10 to unlock)
@@ -25,7 +25,7 @@ fullscreen=false
 fulldouble=false
 fullresolution=original
 windowresolution=original
-output=overlay
+output=surface
 autolock=true
 sensitivity=15
 waitonerror=true
@@ -46,7 +46,7 @@ usescancodes=true
 language=spanish-0.74.lang
 machine=svga_s3
 captures=capture
-memsize=63
+memsize=31
 
 [render]
 # frameskip: How many frames DOSBox skips before drawing one.
@@ -93,7 +93,7 @@ cycledown=20
 
 nosound=false
 rate=44100
-blocksize=4096
+blocksize=2048
 prebuffer=500
 
 [midi]
@@ -104,8 +104,8 @@ prebuffer=500
 # midiconfig: Special configuration options for the device driver. This is usually the id of the device you want to use.
 #               See the README/Manual for more details.
 
-mpu401=intelligent
-mididevice=default
+mpu401=none
+mididevice=none
 midiconfig=
 
 [sblaster]
@@ -152,7 +152,7 @@ oplrate=44100
 #           the patch files for GUS playback. Patch sets used
 #           with Timidity should work fine.
 
-gus=false
+gus=true
 gusrate=44100
 gusbase=240
 gusirq=5
@@ -171,7 +171,7 @@ ultradir=C:\ULTRASND
 
 pcspeaker=true
 pcrate=44100
-tandy=off
+tandy=auto
 tandyrate=44100
 disney=false
 
@@ -234,11 +234,12 @@ keyboardlayout=es
 [ipx]
 # ipx: Enable ipx over UDP/IP emulation.
 
-ipx=true
+ipx=false
 
 [autoexec]
 # Lines in this section will be run at startup.
 # You can put your MOUNT lines here.
-# mount c /home/su-usuario/dosbox -freesize 1024
-# c:
+# imgmount d /home/sinfallas/isos/xcom.iso -t iso
+mount c /home/sinfallas/Dropbox/dosbox -freesize 1024
+c:
 cls
