--- a/dosbox-0.74-3.conf
+++ b/dosbox-0.74-3.conf
@@ -24,7 +24,7 @@ scaler=supereagle
 
 [cpu]
 core=auto
-cputype=dynamic
+cputype=auto
 cycles=auto 5000 80% limit 200000
 cycleup=10
 cycledown=20
@@ -32,7 +32,6 @@ cycledown=20
 [mixer]
 nosound=false
 rate=44100
-blocksize=2048
 prebuffer=500
 
 [midi]
