--- a/dosbox-0.74-3.conf
+++ b/dosbox-0.74-3.conf
@@ -1,9 +1,9 @@
 [sdl]
 fullscreen=false
-fulldouble=false
-fullresolution=original
-windowresolution=original
-output=openglnb
+fulldouble=true
+fullresolution=desktop
+windowresolution=desktop
+output=opengl
 autolock=true
 sensitivity=15
 waitonerror=true
@@ -35,7 +35,7 @@ rate=44100
 prebuffer=500
 
 [midi]
-mpu401=none
+mpu401=intelligent
 mididevice=none
 midiconfig=
 
@@ -88,7 +88,6 @@ keyboardlayout=es
 ipx=false
 
 [autoexec]
-# imgmount d ~/isos/xcom.iso -t iso
 mount c ~/Dropbox/dosbox -freesize 1024
 c:
 cd/dosidle
