--- a/dosbox-0.74-3.conf
+++ b/dosbox-0.74-3.conf
@@ -15,7 +15,7 @@ usescancodes=true
 language=spanish-0.74.lang
 machine=svga_s3
 captures=capture
-memsize=31
+memsize=64
 
 [render]
 frameskip=0
@@ -32,7 +32,7 @@ cycledown=20
 [mixer]
 nosound=false
 rate=44100
-prebuffer=500
+prebuffer=20
 blocksize=4096
 
 [midi]
@@ -91,7 +91,7 @@ ipx=false
 [autoexec]
 mount c ~/Dropbox/dosbox -freesize 1024
 c:
-cd/dosidle
-dosidle
-cd ..
+#cd/dosidle
+#dosidle
+#cd ..
 cls
